Arbiter nodes log error messages when try to create session collection or check if it exists

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.4, v4.2, v4.0
    • Sharding 2020-06-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Arbiters do not need to try to set up sessions collection.
      Currently they are (3.6.8 - confirmed) [LogicalSessionCacheReap] Sessions collection is not set up; waiting until next sessions reap interval: Can not create config.system.sessions collection

            Assignee:
            Cheahuychou Mao
            Reporter:
            Misha Tyulenev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: