SERVER-40441 Make arbiters not try to setup the sessions collection or check if it exists in LogicalSessionCache refresh/reap thread

(cherry picked from commit 35c86a14e2ad2ef8d14fe7ea3ea02951f30e646a)